src/css/custom.css
/* ... */
table thead tr {
  border-bottom: 1px solid var(--docs-color-border);
}

table th {
  font-weight: 500;
  font-size: 14px;
  color: var(--docs-color-text-100);
}

table td {
  vertical-align: top;
}

.tabs {
  border-bottom: 1px solid var(--docs-color-border);
}

.tabs__item {
  --ifm-tabs-padding-vertical: 0.75rem;
  --ifm-tabs-color-active: var(--docs-color-primary-100);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.tabs__item--active {
  border-bottom: 2px solid var(--docs-color-primary-100);
}

/* Customization of home page and cards */
.pad {
  padding: 0 1rem;
}

.center {
  width: 100%;
  max-width: 1080px;
  margin: 1rem auto;
  min-height: 400px;
}

.homepage-content {
  padding-bottom: 6rem;
}

#hero {
  padding: 2rem 0 1.5rem 0;
  margin-bottom: 4rem;
}

#hero h2 {
  font-size: 36px;
}

#hero p {
  color: var(--docs-color-text-100);
  margin-bottom: 0;
}

#hero img {
  margin: 0 auto;
  align-self: center;
}

.homepage-button {
  --ifm-link-hover-color: #fff;
  --ifm-link-hover-decoration: none;
  --ifm-navbar-link-hover-color: #fff;
  background-color: var(--docs-color-primary);
  border-radius: 4px;
  transition-property: all;
  color: #0f2832;
  font-size: 14px;
  display: inline-block;
  padding: var(--ifm-navbar-item-padding-vertical)
    var(--ifm-navbar-item-padding-horizontal);
}

.homepage-button:hover {
  background-color: var(--ifm-color-primary-darkest);
  color: #0f2832;
}

.section-content {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  gap: 12px;
}

.two-cols .section-content {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.has-sub-sections > h3 {
  margin-bottom: 1.5rem;
}

.has-sub-sections > .section-content {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}
.has-sub-sections > .section-content > .homepage-section {
  margin-bottom: 1rem;
  grid-template-columns: repeat(1, minmax(0, 1fr));
}

.homepage-section {
  margin-bottom: 3rem;
}

.homepage-section h3 {
  font-weight: 600;
}

.section-description {
  color: var(--docs-color-text-100);
  margin: 0rem 0 1.25rem 0;
  margin-top: -0.5rem;
}

.has-sub-sections > .section-content .section-description {
  font-size: 14px;
}

.homepage-card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
  padding: 0.75rem;
  text-decoration: none;
  color: var(--docs-color-text);

  --ifm-link-hover-decoration: none;
  --ifm-link-hover-color: inherit;
  cursor: pointer;

  transition-property: background-color, color;

  border: 1px solid var(--docs-color-border);
  border-radius: 8px;
}

.homepage-card:hover {
  background-color: var(--docs-color-background-100);
}

.icon svg {
  width: auto;
  height: 100%;
}

.homepage-card .icon {
  width: 48px;
  height: 48px;
  /* background-color: #262626;
  border-radius: 8px; */
}

.card-content {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.card-content .title {
  font-size: 16px;
  letter-spacing: -0.5px;
  font-weight: 600;
}

.card-content .description {
  font-size: 14px;
  color: var(--docs-color-text-100);
  line-height: 1.5;
}

.picture-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  padding: 0.75rem;
  text-decoration: none;
  color: var(--docs-color-text);

  transition-property: background-color, color;

  border: 1px solid var(--docs-color-border);
  border-radius: 8px;
}

@media screen and (max-width: 1160px) {
  /* Hide icons when header UI breaks */
  .pseudo-icon {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .section-content {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
  .two-cols .section-content {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
}

.disable-external-icon svg {
  display: none;
}

/* Copy Styling from the Webflow site */
.is--color_gradient_back {
  -webkit-text-fill-color: inherit;
  background-image: linear-gradient(90deg, #62feb5, #6cd3f5 44%, #836af7c9);
  background-clip: padding-box;
  border-radius: 24px;
  width: 100%;
  padding: 1px;
}

.is--color_gradient_back-2 {
  -webkit-text-fill-color: inherit;
  background-image: linear-gradient(90deg, #62feb5, #6cd3f5 44%, #836af7c9);
  background-clip: padding-box;
  border-radius: 24px;
  width: 100%;
  min-width: 420px;
  padding: 1px;
}

.sl_image--r-card-m {
  border: 1px solid var(--token--border-1);
  object-fit: contain;
  width: 100%;
  height: auto;
}

.sl_image--r-card-m {
  border: 1px solid var(--token--border-1);
  object-fit: contain;
  width: 100%;
  height: auto;
}

.sl_image--r-card-m.is--ratio_1_1 {
  aspect-ratio: 1;
}

.sl_card_m-2 {
  background-color: #142229;
  border: 1px solid #fff0;
  border-radius: 24px;
}

.sl_card_m-2.card_static {
  grid-column-gap: 20px;
  grid-row-gap: 0px;
  width: 100%;
  padding-left: 36px;
  padding-right: 36px;
  display: flex;
}

.cta-link {
  font-weight: 500;
  font-variation-settings: "wght" 500;
  padding: 0.7rem 1rem;
  display: flex;
  background-color: var(--docs-color-primary);
  border-radius: 4px;
  transition-property: all;
  --ifm-link-hover-color: #fff;
  --ifm-navbar-link-hover-color: #fff;
  color: #000000;
}

.sl_cta_primary {
  grid-column-gap: 0.5rem;
  grid-row-gap: 0.5rem;
  background-color: var(--docs-color-primary);
  box-shadow: 0 0 0 1px #fff0;
  color: #050c0f;
  text-align: center;
  justify-content: center;
  align-items: center;
  transition: background-color 0.35s;
  display: flex;
}

.sl_cta_primary:hover {
  background-color: var(--token--cta-1-bg-hover);
  color: var(--token--cta-1-text);
}

.blockquote {
  border-left: 5px solid #e2e2e2;
  margin-bottom: 10px;
  padding: 10px 20px;
  font-size: 18px;
  line-height: 22px;
}

.cta-flex {
  display: flex;
  flex-wrap: wrap;
  padding-top: 21px;
  padding-bottom: 21px;
}

.cta-flex-item {
  display: flex;
  flex-wrap: wrap;
}

.cta-margin-right {
  justify-self: flex-start;
  justify-content: flex-end;
  align-items: center;
  position: relative;
}
/* ... */

